--- a/ingresso/styles/style.css
+++ b/ingresso/styles/style.css
@@ -1,13 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    width: 1440px;
-    height: 100vh;
+    width: 100svw;
+    overflow-x: hidden;
     background: linear-gradient(180deg, rgba(1, 8, 14, 1) 1%, rgba(4, 24, 50, 1) 39%, rgba(1, 8, 14, 1) 88%);
     margin: 5% auto;
     color: #fff;
 }
 
 header {
-    width: 1200px;
+    width: 60vw;
     margin: 2rem auto;
 }
 
@@ -17,7 +21,7 @@ header .logo {
 }
 
 main.container {
-    width: 1200px;
+    width: 60vw;
     height: auto;
     border: 2px solid #00F4BF;
     margin: 0 auto;
@@ -29,8 +33,8 @@ main.container {
 
 main.container .grafismo {
     background: url('../assets/SVG/Grafismo\ verde.svg');
-    width: 31.9375rem;
-    height: 2.0625rem;
+    width: 32rem;
+    height: 2rem;
     position: absolute;
     top: -19px;
     left: -2px;
@@ -57,6 +61,8 @@ form .input-group {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 100%;
     gap: .5rem;
 
     font-family: 'Inter', sans-serif;
@@ -105,6 +111,7 @@ form button {
 
 .hachuras {
     margin: 5.19rem 0;
+    width: 100%;
 }
 
 .container section {
